@@ -316,17 +316,11 @@ VERSIONED_SYSTEM_MAP
   If set, the kernel's System.map is expected to have an unique
   filename for each kernel of this architecture.
 
-USERDEVFS
-  If set, it's assumed the kernel has no devfs and needs appropriate
-  device entries in the initrd's /dev/ directory.
-
 FLOPPY_SIZE
   The size of a floppy image, in kilobytes.
 IMAGE_SIZE
-  The size of a driver floppy image, in kilobytes.
-USERDEVFS_SIZE
-  The size of an image to create for userdevfs. Must be specified manually
-  since userdevfs device nodes are not included in size calculations.
+  The size of a an image, in kilobytes. Only needed and supported for
+  some types of images.
 
 DISK_LABEL
 MEDIA_TYPE
