@@ -1,19 +1,17 @@
 include config/m68k/common-keymaps.cfg
 EXTRAS = $(M68K_KEYMAPS)
 
-ifndef M68K_USERDEVFS_SIZE
-M68K_USERDEVFS_SIZE = 13000
+ifndef M68K_IMAGE_SIZE
+M68K_IMAGE_SIZE = 13000
 endif
 
 INITRD22 = $(SOME_DEST)/$(EXTRANAME)initrd22.gz
 
 $(INITRD22): $(INITRD)
 	-rm -rf $(TREE)/dev/*
-	echo $(M68K_USERDEVFS_SIZE) > $(TREE)/ramdisk_settings
-	genext2fs -d $(TREE) -b $(M68K_USERDEVFS_SIZE) -r 0 -f userdevfs-devs $(TEMP)/initrd22
+	genext2fs -d $(TREE) -b $(M68K_IMAGE_SIZE) -r 0 -f $(TREE)/userdevfs-devs $(TEMP)/initrd22
 	$(e2fsck) $(TEMP)/initrd22 || true
 	gzip -v9f $(TEMP)/initrd22
-	-rm $(TREE)/ramdisk_settings
 	install -m 644 -D $(TEMP)/initrd22.gz $@
 	update-manifest $@ $(MANIFEST-INITRD22) $(UDEB_LISTS)
 
