@@ -1,21 +1,0 @@
-drwx		/dev
-crw-	5,1	/dev/console
-crw-	5,0	/dev/tty
-crw-	4,64	/dev/ttyS0
-crw-	4,65	/dev/ttyS1
-drwx		/dev/rd
-brw-	1,0	/dev/rd/0
-drwx		/dev/floppy
-brw- 	2,0 	/dev/floppy/0 
-drwx		/dev/loop
-brw- 	7,0	/dev/loop/0
-brw- 	7,1	/dev/loop/1
-brw- 	7,2	/dev/loop/2
-brw- 	7,3	/dev/loop/3
-drwx		/dev/vc
-crw- 	4,0	/dev/vc/0
-crw- 	4,1	/dev/vc/1
-crw- 	4,2	/dev/vc/2
-crw- 	4,3	/dev/vc/3
-crw- 	4,4	/dev/vc/4
-crw-	1,3 	/dev/null
